--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@auth0/angular-jwt": "^2.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "angular-calendar": "^0.25.2",
     "angular-font-awesome": "^3.1.2",
     "angular5-social-login": "^1.0.9",
